# scrapper

./: .env.example  .gitignore  CLAUDE.md  README.md  RECON_REPORT.md  pyproject.toml
docs/superpowers/curls/: README.md
docs/superpowers/handoffs/: 2026-05-06-p2-s2-luxmed-lockterm-handoff.md  _LATEST.md
docs/superpowers/plan-health/: luxmed-scrapper-reanimacja.json
docs/superpowers/plans/: 2026-04-29-luxmed-scrapper-reanimacja.md
docs/superpowers/retros/: 2026-05-06-p2-s1-retro.md
docs/superpowers/specs/: 2026-04-29-luxmed-scrapper-reanimacja-design.md
src/scrapper/: __init__.py  booking.py  catalog.py  cli.py  client.py  config.py  logging_setup.py  models.py  notify.py  search.py
tests/: conftest.py  test_booking.py  test_catalog.py  test_cli.py  test_client_booking.py  test_client_groups.py  test_client_login.py  test_client_oneday.py  test_config.py  test_logging_mask.py  test_models.py  test_notify.py  test_search_filtering.py  test_search_loop.py  test_smoke.py
